# discord-wavenet

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  pr.yml  publish.yml  test.yml
src/: main.rs
src/commands/: join.rs  languages.rs  leave.rs  mod.rs  say.rs  skip.rs
