[package]
name = "discord-wavenet"
version = "0.2.0"
authors = ["Sri Ramanujam <sricharan.ramanujam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { version = "0.3", features = ["builtin-queue"] }
serenity = { version = "0.11", features = ["cache", "standard_framework", "voice", "rustls_backend", "unstable_discord_api"]}
tokio = { version = "1", features = [ "full" ]}
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.40"
tempfile = "3.6.0"
fastrand = "2.0.1"
tracing-futures = "0.2.5"

# Dependencies for the Google text to speech api bindings I'm using
google-texttospeech1 = "*"
hyper = "^1.1"
serde = "^1.0"
serde_json = "^1.0"
base64 = "0.21.5"
